--- a/page_2.html
+++ b/page_2.html
@@ -8,6 +8,6 @@
 	<h1>My First heading</h1>
 	<p>My first paragraph.</p>
 	<h2>My second heading</h2>
-
+	<h3>My third heading</h3>
 </body>
 </html>
