--- a/page_1.html
+++ b/page_1.html
@@ -9,3 +9,15 @@
 	<p>My second paragraph.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>My title</title>
+</head>
+<body>
+	<h1>My First heading</h1>
+	<p>My first paragraph.</p>
+	<p>My second paragraph.</p>
+</body>
+</html>
