--- a/page_2.html
+++ b/page_2.html
@@ -10,3 +10,14 @@
 	<h3>My third heading</h3>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>My title</title>
+</head>
+<body>
+	<h1>My First heading</h1>
+	<p>My second paragraph.</p>
+</body>
+</html>
